--- a/week-6/02. Selenium.ipynb
+++ b/week-6/02. Selenium.ipynb
@@ -2900,6 +2900,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2e2cb40b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "SELECT COUNT(distinct(name))/(SELECT distinct(COUNT(content) FROM feed) as proportion \n",
+    "FROM (SELECT COUNT(name) as total, name, avg(compound) as average\n",
+    "FROM feed\n",
+    "group by name \n",
+    "    HAVING avg(compound)>0.5 and COUNT(name)>1) as aliased_table;\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "becdee0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "SELECT \n",
+    "    COUNT() AS num_users_with_avg_above_0_5,\n",
+    "    (SELECT COUNT(DISTINCT name) FROM feed) AS total_unique_users,\n",
+    "    COUNT() / (SELECT COUNT(DISTINCT name) FROM feed) AS proportion\n",
+    "FROM (\n",
+    "    SELECT name\n",
+    "    FROM feed\n",
+    "    GROUP BY name\n",
+    "    HAVING COUNT(*) > 1\n",
+    ") AS users_with_multiple_names\n",
+    "JOIN (\n",
+    "    SELECT name, AVG(compound) AS avg_compound\n",
+    "    FROM feed\n",
+    "    GROUP BY name\n",
+    "    HAVING AVG(compound) > 0.5\n",
+    ") AS users_with_avg_compound_above_0_5 ON users_with_multiple_names.name = users_with_avg_compound_above_0_5.name;\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dfe0d554",
    "metadata": {},
    "outputs": [],
