--- a/week-6/04 - ETL & NLP/ETL III - Loading.ipynb
+++ b/week-6/04 - ETL & NLP/ETL III - Loading.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1f534d21",
    "metadata": {},
    "outputs": [],
@@ -36,11 +36,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c482fc7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df.to_csv(\"cleaned_lyrics_andres\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b0875110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"lyrics_fake.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "165b02c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>album_name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>user</th>\n",
+       "      <th>lyrics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Canto a Caracas</td>\n",
+       "      <td>Billo's</td>\n",
+       "      <td>Canto a Caracas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>Scarface Script LyricsScarface\\n\\nBy: Oliver S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Peces del Guaire</td>\n",
+       "      <td>Desorden Público</td>\n",
+       "      <td>Descomposición</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cerro Avila</td>\n",
+       "      <td>Ilan Chester</td>\n",
+       "      <td>El Comienzo en un Sotano de la Florida</td>\n",
+       "      <td>0</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Valle De Balas</td>\n",
+       "      <td>Desorden Público</td>\n",
+       "      <td>Plomo Revienta</td>\n",
+       "      <td>22</td>\n",
+       "      <td>marianamartinh</td>\n",
+       "      <td>Valle De Balas LyricsLa ciudad se encierra a v...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Las Caraqueñas</td>\n",
+       "      <td>Guaco</td>\n",
+       "      <td>Guaco Es Guaco</td>\n",
+       "      <td>29</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>Las Caraqueñas LyricsNo sé que tienen las chic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Epa Isidoro</td>\n",
+       "      <td>Billo's</td>\n",
+       "      <td>Canto a Caracas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Caracas Tiene Su Guaguanco</td>\n",
+       "      <td>Justo Betancourt</td>\n",
+       "      <td>Pa Bravo Yo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1253681944</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Luna Caraqueña</td>\n",
+       "      <td>Billo's</td>\n",
+       "      <td>Canto a Caracas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Caminando por Caracas</td>\n",
+       "      <td>Piero</td>\n",
+       "      <td>Piero</td>\n",
+       "      <td>0</td>\n",
+       "      <td>soyarepita</td>\n",
+       "      <td>CONGRESOS E INTELECTUALES EN LOS INICIOS DE UN...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Caracas de Noche - Original Mix</td>\n",
+       "      <td>Javith</td>\n",
+       "      <td>Caracas de Noche (Remixes)</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1253681944</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>La Sifrina</td>\n",
+       "      <td>Medioevo</td>\n",
+       "      <td>La Sifrina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1253681944</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>La Vecina</td>\n",
+       "      <td>Los Amigos Invisibles</td>\n",
+       "      <td>Arepa 3000</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1245001868</td>\n",
+       "      <td>La Vecina Lyrics[Letra de \"La Vecina\"]\\n\\nToda...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Caracas: Te Quiero _ _ _ _ _</td>\n",
+       "      <td>Masseratti 2Lts</td>\n",
+       "      <td>Colores de Ideas #7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1245001868</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>La Hora De Caracas</td>\n",
+       "      <td>Telegrama</td>\n",
+       "      <td>Cambia Tus Amigos</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1245001868</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>En La Ciudad De La Furia - Remasterizado 2007</td>\n",
+       "      <td>Soda Stereo</td>\n",
+       "      <td>Me Verás Volver (Hits &amp; Más)</td>\n",
+       "      <td>50</td>\n",
+       "      <td>marianamartinh</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             name                 artist   \n",
+       "0                                 Canto a Caracas                Billo's  \\\n",
+       "1                                Peces del Guaire       Desorden Público   \n",
+       "2                                     Cerro Avila           Ilan Chester   \n",
+       "3                                  Valle De Balas       Desorden Público   \n",
+       "4                                  Las Caraqueñas                  Guaco   \n",
+       "5                                     Epa Isidoro                Billo's   \n",
+       "6                      Caracas Tiene Su Guaguanco       Justo Betancourt   \n",
+       "7                                 Luna Caraqueña                Billo's   \n",
+       "8                           Caminando por Caracas                  Piero   \n",
+       "9                 Caracas de Noche - Original Mix                 Javith   \n",
+       "10                                     La Sifrina               Medioevo   \n",
+       "11                                      La Vecina  Los Amigos Invisibles   \n",
+       "12                   Caracas: Te Quiero _ _ _ _ _        Masseratti 2Lts   \n",
+       "13                             La Hora De Caracas              Telegrama   \n",
+       "14  En La Ciudad De La Furia - Remasterizado 2007            Soda Stereo   \n",
+       "\n",
+       "                                album_name  popularity            user   \n",
+       "0                          Canto a Caracas           0      soyarepita  \\\n",
+       "1                           Descomposición           3      soyarepita   \n",
+       "2   El Comienzo en un Sotano de la Florida           0      soyarepita   \n",
+       "3                           Plomo Revienta          22  marianamartinh   \n",
+       "4                           Guaco Es Guaco          29      soyarepita   \n",
+       "5                          Canto a Caracas           0      soyarepita   \n",
+       "6                              Pa Bravo Yo           0      1253681944   \n",
+       "7                          Canto a Caracas           0      soyarepita   \n",
+       "8                                    Piero           0      soyarepita   \n",
+       "9               Caracas de Noche (Remixes)          26      1253681944   \n",
+       "10                              La Sifrina           0      1253681944   \n",
+       "11                              Arepa 3000          42      1245001868   \n",
+       "12                     Colores de Ideas #7          13      1245001868   \n",
+       "13                       Cambia Tus Amigos           0      1245001868   \n",
+       "14            Me Verás Volver (Hits & Más)          50  marianamartinh   \n",
+       "\n",
+       "                                               lyrics  \n",
+       "0   Scarface Script LyricsScarface\\n\\nBy: Oliver S...  \n",
+       "1                                                 NaN  \n",
+       "2                                                 NaN  \n",
+       "3   Valle De Balas LyricsLa ciudad se encierra a v...  \n",
+       "4   Las Caraqueñas LyricsNo sé que tienen las chic...  \n",
+       "5                                                 NaN  \n",
+       "6                                                 NaN  \n",
+       "7                                                 NaN  \n",
+       "8   CONGRESOS E INTELECTUALES EN LOS INICIOS DE UN...  \n",
+       "9                                                 NaN  \n",
+       "10                                                NaN  \n",
+       "11  La Vecina Lyrics[Letra de \"La Vecina\"]\\n\\nToda...  \n",
+       "12                                                NaN  \n",
+       "13                                                NaN  \n",
+       "14                                                NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "049cbffd",
    "metadata": {},
    "outputs": [],
@@ -64,8 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7436ad50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def connection_database (database_name):\n",
+    "    password=getpass()\n",
+    "    connectionData = f\"mysql+pymysql://root:{password}@localhost/{database_name}\"\n",
+    "\n",
+    "    engine = alch.create_engine(connectionData)\n",
+    "    return engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4931681c",
    "metadata": {},
    "outputs": [
     {
@@ -77,20 +341,51 @@
     }
    ],
    "source": [
-    "password=getpass()\n",
-    "dbName=\"spotify\"\n",
-    "connectionData = f\"mysql+pymysql://root:{password}@localhost/{dbName}\"\n",
-    "\n",
-    "engine = alch.create_engine(connectionData)"
+    "engine = connection_database (\"spotify\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe662431",
+   "execution_count": 10,
+   "id": "b31dcfaa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insert_into_db (df, table_name):\n",
+    "    try:\n",
+    "        df.to_sql(table_name, if_exists=\"append\", con=engine, index=False)\n",
+    "        \n",
+    "    except:\n",
+    "        query_alter_column = f\"\"\"\n",
+    "        ALTER TABLE `spotify`.`{table_name}` \n",
+    "        CHANGE COLUMN `lyrics` `lyrics` LONGTEXT NULL DEFAULT NULL;\"\"\"\n",
+    "\n",
+    "        engine.execute(query_alter_column)\n",
+    "        df.to_sql(table_name, if_exists=\"append\", con=engine, index=False)\n",
+    "    \n",
+    "    return f\"Success!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0456b6a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success!'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert_into_db (df, \"random_name\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +403,157 @@
    "id": "f7d7ecfb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# if \n",
+    "    #  name, artist in sql\n",
+    "    # ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "09ae3b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artist = \"Guaco\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1d152540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song = \"Las Caraqueñas\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4fcf2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = f\"select * from songs_april where artist = '{artist}' and name = '{song}';\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "298fc40e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(engine.execute(query)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8fa453a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"select * from songs_april where artist = 'Guaco' and name = 'Las Caraqueñas';\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15f477ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through the dataframe\n",
+    "# for one row: artist of the row & the song of the row\n",
+    "# if query returns  > result: exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e820ad84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e504f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_into_sql_python (df):\n",
+    "    for index, row in df.iterrows():\n",
+    "        if len(list(engine.execute(query))) > 0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            engine.execute(insert_query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce08f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only wiht sql\n",
+    "\n",
+    "def insert_into_sql_python (df):\n",
+    "    \n",
+    "    row = {\n",
+    "        \"name\": \"name\",\n",
+    "        \"artist\": \"artist\",\n",
+    "        \"name\": \"name\"\n",
+    "    }\n",
+    "    \n",
+    "    query_duplicates_subquery = f\"\"\"\n",
+    "        INSERT INTO songs (\"{row.name}\", \"{row.artist}\")\n",
+    "            WHERE \"{row.name}\", \"{row.artist}\" NOT IN \n",
+    "                (SELECT name, artist FROM songs)\n",
+    "        \"\"\"\n",
+    "\n",
+    "    for index, row in df.iterrows():\n",
+    "        engine.execute(query_duplicates_subquery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42bb973c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.read_sql_query(query, engine)"
+   ]
   },
   {
    "cell_type": "markdown",
