--- a/week-7/03-Classification.ipynb
+++ b/week-7/03-Classification.ipynb
@@ -2460,18 +2460,7 @@
    "execution_count": null,
    "id": "29e0b925",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/fernandocosta/anaconda3/envs/computervision2/lib/python3.7/site-packages/sklearn/base.py:451: UserWarning:\n",
-      "\n",
-      "X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -2490,8 +2479,16 @@
     "\n",
     "# Fit the logistic regression model\n",
     "model = LogisticRegression()\n",
-    "model.fit(X, y)\n",
-    "\n",
+    "model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c23787a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generate predictions\n",
     "y_pred = model.predict(X)\n",
     "\n",
@@ -2509,8 +2506,16 @@
     "            opacity=0.8\n",
     "        )\n",
     "    )\n",
-    "])\n",
-    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f6a0b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generate a meshgrid of points to create decision boundary\n",
     "x_min, x_max = X['mean_radius'].min() - 1, X['mean_radius'].max() + 1\n",
     "y_min, y_max = X['mean_area'].min() - 1, X['mean_area'].max() + 1\n",
@@ -2552,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "80e5c835",
+   "id": "7d014016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2561,7 +2566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87ee498a",
+   "id": "5a4e7491",
    "metadata": {},
    "source": [
     "```bash\n",
@@ -2584,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6959a6b6",
+   "id": "8aeeec42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2600,7 +2605,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b489b544",
+   "id": "5a4a9ad8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2624,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0f23b6a6",
+   "id": "ea0e4459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2638,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3f23fdc5",
+   "id": "7a49adb3",
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbc9071",
+   "id": "31b3e31c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2708,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8c592164",
+   "id": "d1ae87dc",
    "metadata": {},
    "outputs": [
     {
@@ -2746,7 +2751,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "9329df66",
+   "id": "6027962b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2756,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b1af2e",
+   "id": "73a3c8bc",
    "metadata": {},
    "source": [
     "# Prediction"
@@ -2765,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6b1b6ec2",
+   "id": "2a6f7c1c",
    "metadata": {
     "scrolled": true
    },
@@ -2799,7 +2804,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0da96810",
+   "id": "1c53d65a",
    "metadata": {
     "scrolled": true
    },
