--- a/week-7/Kaggle competition/Kaggle mock submission - Steps to follow.ipynb
+++ b/week-7/Kaggle competition/Kaggle mock submission - Steps to follow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import numpy as np\n",
-    "from sklearn.svm import SVR\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import os\n",
     "from sys import platform"
    ]
@@ -106,26 +106,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6521</th>\n",
-       "      <td>6521</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>H</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>63.8</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>5.99</td>\n",
-       "      <td>5.96</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>8.068</td>\n",
+       "      <th>22491</th>\n",
+       "      <td>22491</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VVS2</td>\n",
+       "      <td>60.6</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>6.17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id  carat   cut color clarity  depth  table     x     y     z  price\n",
-       "6521  6521   0.91  Good     H     VS2   63.8   59.0  5.99  5.96  3.82  8.068"
+       "          id  carat        cut color clarity  depth  table     x     y     z   \n",
+       "22491  22491   0.24  Very Good     E    VVS2   60.6   62.0  4.03  4.06  2.45  \\\n",
+       "\n",
+       "       price  \n",
+       "22491   6.17  "
       ]
      },
      "execution_count": 3,
@@ -177,25 +180,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4643</th>\n",
-       "      <td>4643</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>F</td>\n",
-       "      <td>VS1</td>\n",
-       "      <td>61.1</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>3.97</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>2.43</td>\n",
+       "      <th>10790</th>\n",
+       "      <td>10790</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>5.34</td>\n",
+       "      <td>5.29</td>\n",
+       "      <td>3.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id  carat    cut color clarity  depth  table     x     y     z\n",
-       "4643  4643   0.23  Ideal     F     VS1   61.1   56.0  3.97  3.99  2.43"
+       "          id  carat      cut color clarity  depth  table     x     y     z\n",
+       "10790  10790   0.54  Premium     E     VS2   60.0   58.0  5.34  5.29  3.19"
       ]
      },
      "execution_count": 4,
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,32 +307,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19324</th>\n",
-       "      <td>19324</td>\n",
-       "      <td>2.33</td>\n",
+       "      <th>6069</th>\n",
+       "      <td>6069</td>\n",
+       "      <td>0.46</td>\n",
        "      <td>Ideal</td>\n",
        "      <td>I</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>62.4</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>8.52</td>\n",
-       "      <td>8.47</td>\n",
-       "      <td>5.31</td>\n",
-       "      <td>9.621</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>61.9</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>4.97</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>3.08</td>\n",
+       "      <td>6.745</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id  carat    cut color clarity  depth  table     x     y     z   \n",
-       "19324  19324   2.33  Ideal     I     VS2   62.4   57.0  8.52  8.47  5.31  \\\n",
-       "\n",
-       "       price  \n",
-       "19324  9.621  "
+       "        id  carat    cut color clarity  depth  table     x     y     z  price\n",
+       "6069  6069   0.46  Ideal     I     SI1   61.9   55.0  4.97  4.98  3.08  6.745"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,28 +386,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>207</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>64.9</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>5.54</td>\n",
-       "      <td>3.6</td>\n",
+       "      <th>11583</th>\n",
+       "      <td>11583</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>62.4</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>5.78</td>\n",
+       "      <td>5.71</td>\n",
+       "      <td>3.59</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id  carat   cut color clarity  depth  table     x     y    z\n",
-       "207  207    0.7  Fair     G     VS2   64.9   57.0  5.55  5.54  3.6"
+       "          id  carat   cut color clarity  depth  table     x     y     z\n",
+       "11583  11583   0.74  Good     H     SI1   62.4   65.0  5.78  5.71  3.59"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "regressor = SVR(kernel = 'rbf')\n",
+    "regressor = LinearRegression()\n",
     "regressor.fit(X_train, y_train)\n",
     "\n",
     "# Just for feedback\n",
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,16 +699,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0158023924706365"
+       "0.266507906679975"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "[13485 rows x 10 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -991,14 +991,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5193</th>\n",
-       "      <td>5193</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>61.3</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>6.06</td>\n",
-       "      <td>6.08</td>\n",
-       "      <td>3.72</td>\n",
+       "      <th>1485</th>\n",
+       "      <td>1485</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>6.23</td>\n",
+       "      <td>3.82</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1006,10 +1006,10 @@
       ],
       "text/plain": [
        "        id  carat  depth  table     x     y     z\n",
-       "5193  5193   0.82   61.3   55.0  6.06  6.08  3.72"
+       "1485  1485    0.9   61.5   58.0  6.19  6.23  3.82"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1100,25 +1100,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11179</th>\n",
-       "      <td>11179</td>\n",
-       "      <td>2.01</td>\n",
-       "      <td>62.7</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>7.94</td>\n",
-       "      <td>8.03</td>\n",
-       "      <td>5.01</td>\n",
+       "      <th>5782</th>\n",
+       "      <td>5782</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>62.3</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>2.73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id  carat  depth  table     x     y     z\n",
-       "11179  11179   2.01   62.7   60.0  7.94  8.03  5.01"
+       "        id  carat  depth  table     x    y     z\n",
+       "5782  5782   0.32   62.3   55.0  4.37  4.4  2.73"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1179,20 +1179,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11692</th>\n",
-       "      <td>11692</td>\n",
-       "      <td>7.803093</td>\n",
+       "      <th>6257</th>\n",
+       "      <td>6257</td>\n",
+       "      <td>6.968429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id     price\n",
-       "11692  11692  7.803093"
+       "        id     price\n",
+       "6257  6257  6.968429"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1256,27 +1256,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>7.771874</td>\n",
+       "      <td>8.112411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>7.771783</td>\n",
+       "      <td>7.273607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>7.771669</td>\n",
+       "      <td>6.592413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>7.772065</td>\n",
+       "      <td>9.050883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>7.771728</td>\n",
+       "      <td>6.693590</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1284,14 +1284,14 @@
       ],
       "text/plain": [
        "   id     price\n",
-       "0   0  7.771874\n",
-       "1   1  7.771783\n",
-       "2   2  7.771669\n",
-       "3   3  7.772065\n",
-       "4   4  7.771728"
+       "0   0  8.112411\n",
+       "1   1  7.273607\n",
+       "2   2  6.592413\n",
+       "3   3  9.050883\n",
+       "4   4  6.693590"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
